# pytest_tut

./: README.md  calculate_sum.py  cat_fact.py  conftest.py  database.py  number_facts.py  pyproject.toml  test_calculate_sum_no_monkeypatch.py  test_cat_fact.py  test_number_facts.py  test_sample.py
project_2/tests/: conftest.py  test_smtp_2.py  test_smtp_class.py
project_3/: core.py
project_3/tests/: conftest.py  test_core_error_handling.py  test_core_functionality.py
project_4/: README.md  basic.py
project_4/tests/: conftest.py  test_basic.py  test_fixture.py
project_5/: cat_fact.py  test_cat_fact.py
project_6/: models.py  test_models_with_fixture.py  test_models_woth_class.py
project_7/: .gitignore  Dockerfile  README.md  app.py  build.sh  build_docker.sh  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  setup.py  start.sh  start_docker.sh  test.db  test_main.py
project_7/alembic/: env.py
project_7/alembic/versions/: d94e0a24e6a0_first_init.py
project_7/models/: __init__.py  items.py  users.py
project_7/schemas/: users.py
project_7/tests/: conftest.py  test_items.py  test_users.py
project_7/views/: items.py  users.py
project_8/alembic/: env.py
project_8/alembic/versions/: 5504ef456f3a_adding_user_model.py
project_8/app/: __init__.py  config.py  models.py
project_8/app/services/: database.py
project_8/app/views/: user.py
project_8/tests/integration/: conftest.py
